@@ -1,0 +1,216 @@
+; $Id: nn-NO.ini 1607 2011-02-16 22:25:12Z rued $
+; Joomla! Project
+; Copyright (C) 2005 - 2011 Open Source Matters. All rights reserved.
+; License GNU General Public License version 2 or later; see LICENSE.txt
+; Note : All ini files need to be saved as UTF-8
+
+
+
+;Stepbar
+INSTL_STEPS_TITLE="Steg"
+INSTL_STEP_1_LABEL="1 : Språk"
+INSTL_STEP_2_LABEL="2 : Systemsjekk"
+INSTL_STEP_3_LABEL="3 : Lisens"
+INSTL_STEP_4_LABEL="4 : Database"
+INSTL_STEP_5_LABEL="5 : FTP-konfigurasjon"
+INSTL_STEP_6_LABEL="6 : Konfigurasjon"
+INSTL_STEP_7_LABEL="7 : Ferdig"
+
+;Language view
+INSTL_SELECT_LANGUAGE_TITLE="Vel språk"
+INSTL_SELECT_LANGUAGE_DESC="Vel språk som skal brukast under installasjonen av Joomla!"
+INSTL_LANGUAGE_TITLE="Vel språk"
+INSTL_WARNJAVASCRIPT="Åtvaring! JavaScript må vere aktivert for riktig installasjon av Joomla!"
+
+;Preinstall view
+INSTL_PRECHECK_TITLE="Systemsjekk"
+INSTL_PRECHECK_FOR_VERSION="Systemsjekk for %s:"
+INSTL_PRECHECK_DESC="Viss somme av desse elementa ikkje er støtta (merka med <strong class="_QQ_"red"_QQ_">Nei</strong>) bør du sørge for korrigering av desse. Viss dette ikkje blir gjort kan det føre til at Joomla!-installasjon ikkje fungerer som han skal."
+INSTL_PRECHECK_RECOMMENDED_SETTINGS_TITLE="Anbefalte innstillingar:"
+INSTL_PRECHECK_RECOMMENDED_SETTINGS_DESC="Desse innstillingane er tilrådd for PHP for å sikre full kompatibilitet med Joomla!, men Joomla! vil likevel kunne køyre sjølv om dine innstillingar ikkje stemmer heilt med dei tilrådde."
+INSTL_PRECHECK_DIRECTIVE="Direktiv"
+INSTL_PRECHECK_RECOMMENDED="Tilrådde"
+INSTL_PRECHECK_ACTUAL="Gjeldande"
+
+; Database view
+INSTL_DATABASE="Databasekonfigurasjon"
+INSTL_DATABASE_HOST_DESC="Dette er vanlegvis &quot;localhost&quot;."
+INSTL_DATABASE_HOST_LABEL="Tenarnamn"
+INSTL_DATABASE_NAME_DESC="Somme netthotell tillèt berre eit gitt tal databasenamn per nettstad. Bruk tabellprefiks i slike tilfelle for å skilje Joomla!-installasjonane."
+INSTL_DATABASE_NAME_LABEL="Databasenamn"
+INSTL_DATABASE_OLD_PROCESS_DESC="Eventuelle eksisterande tryggleikskopierte tabellar frå tidlegare Joomla!-installasjonar vil bli overskrive."
+INSTL_DATABASE_OLD_PROCESS_LABEL="Behandling av gammal database"
+INSTL_DATABASE_PASSWORD_DESC="Av omsyn til tryggleiken er eit passord for MySQL-kontoen påkravd."
+INSTL_DATABASE_PASSWORD_LABEL="Passord"
+INSTL_DATABASE_PREFIX_DESC="Vel eit databaseprefiks. Ideelt sett bør dette vere på tre eller fire teikn, og berre innehalde alfanumeriske teikn. Det MÅ også ende med ein understrek. Ikkje bruk &quot;bak_&quot; sidan dette blir brukt for tryggleikskopierte tabellar."
+INSTL_DATABASE_PREFIX_LABEL="Tabellprefiks"
+INSTL_DATABASE_TYPE_DESC="Dette er truleg &quot;MySQLi&quot;"
+INSTL_DATABASE_TYPE_LABEL="Databasetype"
+INSTL_DATABASE_USER_DESC="Anten noko slikt som "_QQ_"root"_QQ_", eller eit brukarnamn sett av din leverandør."
+INSTL_DATABASE_USER_LABEL="Brukarnamn"
+INSTL_DATABASE_TITLE="Innstillingar for tilkopling"
+INSTL_DATABASE_DESC="<p>Ein Joomla! nettstad lagrar alle sine data i ein database. Dette skjermbiletet gir installasjonsprogrammet nødvendig informasjon for å opprette denne databasen</p><p>Om du installerer Joomla! på ein ekstern nettserver vil du måtte få denne informasjonen frå din leverandør.</p><p>Somme netthotell krev at du oppretter databasen før du installerer Joomla. OM du får meldinga "_QQ_"Kunne ikkje kople til databasen"_QQ_" må du sjekke om brukarnamn og passord er riktig. Om du framleis får denne meldinga etter å ha forsikra deg om at dette er rett vil du måtte sjekke med leverandøren om du må opprette databasen før du installerer Joomla.</p>"
+
+;Filesystem view
+INSTL_AUTOFIND_FTP_PATH="Finn FTP-sti automatisk"
+INSTL_FTP="FTP-konfigurasjon"
+INSTL_FTP_DESC="<p>På som tenarar må du oppgi brukardetaljar for FTP for å kunne fullføre installasjonen. Viss du har problemer med å fullføre installasjonen uten dette, sjekk med leverandøren av netthotell for å finne ut om dette er nødvendig.</p><p>Av sikkerhetshensyn er det best å opprette en egen FTP-brukerkonto som berre har tilgang til Joomla!-installasjon og ikkje hele netthotellkontoen. Din leverandør av netthotell kan hjelpe deg med dette.</p><p><b>Merk:</b> Viss du installerer på et Windows-operativsystem, er <strong class="_QQ_"red"_QQ_">ikkje</strong> FTP-laget nødvendig.</p>"
+INSTL_FTP_ENABLE_LABEL="Aktiver FTP-lag"
+INSTL_FTP_HOST_LABEL="FTP-tenar"
+INSTL_FTP_PASSWORD_LABEL="FTP-passord"
+INSTL_FTP_PORT_LABEL="FTP-port"
+INSTL_FTP_ROOT_LABEL="FTP-rotsti"
+INSTL_FTP_SAVE_LABEL="Lagre FTP-passord"
+INSTL_FTP_TITLE="FTP-konfigurasjon (<strong class="_QQ_"red"_QQ_">Valfritt - Dei fleste brukarar kan hoppe over dette trinnet - Trykk <em>Neste</em> for å halde fram</strong>)"
+INSTL_FTP_USER_LABEL="FTP-brukarnamn"
+INSTL_SITE_NAME_LABEL="Sidenamn"
+INSTL_VERIFY_FTP_SETTINGS="Bekreft FTP-innstillingar"
+INSTL_FTP_SETTINGS_CORRECT="Innstillingar er korrekte"
+INSTL_FTP_USER_DESC="Åtvaring! Det er tilrådd å la dette stå tomt, og heller skrive inn FTP-brukarnamn for kvar gong du overfører filer."
+INSTL_FTP_PASSWORD_DESC="Åtvaring! Det er tilrådd å la dette stå tomt, og heller skrive inn FTP-passord for kvar gong du overfører filer."
+
+;Site View
+INSTL_SITE="Konfigurasjon"
+INSTL_ADMIN_EMAIL_LABEL="E-postadresse"
+INSTL_ADMIN_PASSWORD_LABEL="Passord"
+INSTL_ADMIN_PASSWORD2_LABEL="Stadfest passord"
+INSTL_ADMIN_USER_LABEL="Brukarnamn"
+INSTL_SITE_NAME_TITLE="Sidenamn"
+INSTL_SITE_META_ADVANCED_SETTINGS="Avanserte innstillingar - Valfritt"
+INSTL_SITE_NAME_DESC="Skriv inn eit namn for di Joomla!-side.<br /><br />Valfritt: Du kan også angi metaskildring og -nøkkelord for nettstaden din under <em>Avanserte innstillingar - Valfritt</em>."
+INSTL_SITE_METADESC_LABEL="Metaskildring"
+INSTL_SITE_METADESC_TITLE_LABEL="Skriv inn ei global skildring for nettsida, som brukast av søkemotorar. Normalt bør du ikkje bruke meir enn ca. 20 ord."
+INSTL_SITE_METAKEYS_LABEL="Metanøkkelord"
+INSTL_SITE_METAKEYS_TITLE_LABEL="Skriv inn søkeord og uttrykk som skildrar ditt nettstad. Skil søkeord og uttrykk med komma."
+INSTL_SITE_CONF_TITLE="Stadfest administratorens e-postadresse og passord"
+INSTL_SITE_CONF_DESC="Skriv inn di e-postadresse. Dette vil vere e-postadressa til nettsidas superadministrator.<br /><br />Skriv inn eit nytt passord og stadfest det i dei aktuelle felta. Du bør endre standard brukarnamn som er <strong>admin</strong>. Dette vil vere brukarnamnet og passordet som du skal bruke for å logge inn på administratorsida når installasjonen er fullført.<br /><br />Viss du migrerer kan du ignorere denne delen. Dine noverande innstillingar vil bli migrert automatisk."
+INSTL_SITE_LOAD_SAMPLE_TITLE="Installer standard eksempeldata"
+INSTL_SITE_LOAD_SAMPLE_DESC1="<strong>Viktig!</strong>: Det er tilrådd at nybegynnarar installerer eksempeldata. For å gjeere dette, klikk på knappen <i>før</i> du går til neste trinn."
+INSTL_SITE_LOAD_SAMPLE_DESC2="<strong>1. Eksempeldata:</strong> Før du avsluttar installasjonen kan du laste inn data i sidas database, det finst tre valg for dette:"
+INSTL_SITE_LOAD_SAMPLE_DESC3="<strong>1a. Standard eksempeldata</strong> kan installerast. Kontroller at standard Engelsk (GB) eksempeldata synast i nedtrekkslista og klikk på <em>Installer eksempeldata</em>."
+INSTL_SITE_LOAD_SAMPLE_DESC4="<strong>1b. Tilpassa eksempeldata</strong> kan installerast. For å kunne gjere dette må det finst ekstra fil(er) i <em>installation/sql/mysql/</em> kor filnamnet begynner med <em>sample_data_</em> og har ending <em>.sql</em>. Slike filer vil då visast, og kan veljast i nedtrekkslista. Klikk på <em>Installer eksempeldata</em> når du har valt ønska fil."
+INSTL_SITE_LOAD_SAMPLE_DESC8="<strong>2. Rein installasjon</strong>: Viss du ønskjer å utføre ein ren installasjon, skriv inn namnet på nettstaden, administrators e-postadresse og vel eit passord. Hald deretter fram til siste steg ved å klikke <em>Neste</em>."
+INSTL_SITE_SAMPLE_LABEL="Eksempeldata"
+INSTL_SITE_INSTALL_SAMPLE_LABEL="Installer eksempeldata"
+INSTL_SITE_INSTALL_SAMPLE_DESC="Installering av eksempeldata er sterkt tilrådd for nybegynnarar. Dette valet vil installere standard eksempeldata som er inkludert i installasjonpakken for Joomla!."
+INSTL_SITE_SAMPLE_LOADED="Eksempeldata blei installert"
+INSTL_SAMPLE_DATA_SET="Standard Engelsk (GB) eksempeldata"
+INSTL_SAMPLE_DATA_NORWEGIAN_SET="Standard norsk eksempeldata"
+
+;Complete view
+INSTL_COMPLETE="Ferdig"
+INSTL_COMPLETE_ADMINISTRATION_LOGIN_DETAILS="Innloggingsdetaljar for administrasjonen"
+INSTL_COMPLETE_DESC1="Klikk på <em>Nettsted</em>-knappen for å opne Joomla!-sida di eller <em>Administrator</em>-knappen for å opne innloggingssida for administrasjonen."
+INSTL_COMPLETE_DESC2="På <em>Joomla! Community</em>-nettsida vil du finne ei liste med lenker til tilgjengelege språkpakkar, samt lenker til språkrelaterte ressursar på joomla.org sine nettsider."
+INSTL_COMPLETE_DESC3="Klikk på lenka til høgre for å opne fellesskapssidene i eit nytt vindauge."
+INSTL_COMPLETE_ERROR_FOLDER_ALREADY_REMOVED="Installasjonsmappen er allereie sletta."
+INSTL_COMPLETE_ERROR_FOLDER_DELETE="Installasjonsmappa kunne ikkje slettast, du må slette ho manuelt."
+INSTL_COMPLETE_FOLDER_REMOVED="Installasjonsmappa blei sletta"
+INSTL_COMPLETE_LANGUAGE_1="Joomla! i ditt eige språk?"
+INSTL_COMPLETE_LANGUAGE_2="Besøk <em>Joomla! Community</em>-nettsida for nedlastning av språkpakkar."
+INSTL_COMPLETE_REMOVE_FOLDER="Slett installasjonsmappa"
+INSTL_COMPLETE_REMOVE_INSTALLATION="HUGS Å SLETTE<br/>INSTALLASJONSMAPPA<br />Du vil ikkje kunne halde fram før installasjonsmappa er sletta. Dette er ein tryggleiksfunksjon for Joomla!."
+INSTL_COMPLETE_TITLE="Gratulerer! Joomla! er no installert."
+
+;Database Model
+INSTL_DATABASE_COULD_NOT_CONNECT="Kunne ikkje kople til databasen. Tilkopling svarte med nummer: %s"
+INSTL_DATABASE_EMPTY_NAME=""
+INSTL_DATABASE_ERROR_BACKINGUP="Feil oppstod under tryggleikskopiering av database."
+INSTL_DATABASE_ERROR_CREATE="En feil oppstod under forsøk på å opprette databasen %s.<br />Brukar har kanskje ikkje tilstrekkelege rettar for å opprettet ein ny database, eller databasen må opprettast i netthotellets kontrollpanel, phpMyAdmin eller liknande før du kan installere Joomla!."
+INSTL_DATABASE_ERROR_DELETE="Feil oppstod under sletting av databasen."
+INSTL_DATABASE_FIELD_VALUE_REMOVE="Slett"
+INSTL_DATABASE_FIELD_VALUE_BACKUP="Tryggleikskopier"
+INSTL_DATABASE_FIX_TOO_LONG="Tabellprefikset kan ikkje vere lenger enn 15 teikn"
+INSTL_DATABASE_INVALID_DB_DETAILS="Oppgitte databasedetaljar er feil og/eller ikkje utfylt."
+INSTL_DATABASE_INVALID_MYSQL_VERSION="Du må ha MySQL 5.0.4 eller nyare for å halde fram med installasjonen. Din versjon er: %s"
+INSTL_DATABASE_INVALID_TYPE="Vel databasetype"
+INSTL_DATABASE_NAME_TOO_LONG="Databasenavnet kan ikkje vere lenger enn 64 teikn."
+INSTL_DATABASE_PREFIX_INVALID_CHARS="Tabellprefikset må starte med ein bokstav, etterfulgt av bokstavar, tal eller understrek."
+INSTL_DATABASE_INVALID_NAME="MySQL-versjoner eldre enn 5.1.6 kan ikkje innehalde punktum eller andre "_QQ_"spesielle"_QQ_" teikn i navnet. Din versjon er: %s"
+INSTL_DATABASE_NAME_INVALID_SPACES="MySQL-databasenavn og -tabellnavn kan ikkje begynne eller slutte med mellomrom."
+INSTL_DATABASE_NAME_INVALID_CHAR="Ingen MySQL-identifikator kan innehalde ein NULL ASCII(0x00)."
+INSTL_DATABASE_FILE_DOES_NOT_EXIST="Filen %s finst ikkje"
+
+;controllers
+INSTL_COOKIES_NOT_ENABLED="Informasjonskapslar ser ikkje ut til å vere aktivert i din nettlesar.  Du vil ikkje kunne installere applikasjonen med denne funksjonen deaktivert. Det kan også vere noko feil med <strong>session.save_path</strong> på tenaren, om dette er tilfellet bør du forhøre deg med din leverandør om du er usikker på korleis du sjølv sjekkar eller rettar opp dette."
+INSTL_HEADER_ERROR="Feil"
+
+;Helpers
+INSTL_PAGE_TITLE="Nettinstallasjon av Joomla!"
+
+;Configuration model
+INSTL_ERROR_CONNECT_DB="Kunne ikkje kople til databasen. Tilkopling svarte med nummer: %s"
+INSTL_STD_OFFLINE_MSG="Denne sida er nede for vedlikehald.<br /> Velkommen tilbake litt seinare."
+
+;Filesystem model
+INSTL_FTP_INVALIDROOT="Angitt FTP-mappe er ikkje mappa til denne installasjonen"
+INSTL_FTP_NOCONNECT="Kunne ikkje koble til FTP-tenar"
+INSTL_FTP_NODELE="Funksjonen "_QQ_"DELE"_QQ_" feila."
+INSTL_FTP_NODIRECTORYLISTING="Kunne ikkje hente ei mappeliste frå FTP-tenar"
+INSTL_FTP_NOLIST="Funksjonen "_QQ_"LIST"_QQ_" feila."
+INSTL_FTP_NOLOGIN="Kunne ikkje logge på FTP-tenaren."
+INSTL_FTP_NOMKD="Funksjonen "_QQ_"MKD"_QQ_" feila."
+INSTL_FTP_NONLST="Funksjonen "_QQ_"NLST"_QQ_" feila."
+INSTL_FTP_NOPWD="Funksjonen "_QQ_"PWD"_QQ_" feila."
+INSTL_FTP_NORETR="Funksjonen "_QQ_"RETR"_QQ_" feila."
+INSTL_FTP_NORMD="Funksjonen "_QQ_"RMD"_QQ_" feila."
+INSTL_FTP_NOROOT="Kunne ikkje opne angitt FTP-mappe"
+INSTL_FTP_NOSTOR="Funksjonen "_QQ_"STOR"_QQ_" feila."
+INSTL_FTP_NOSYST="Funksjonen "_QQ_"SYST"_QQ_" feila."
+INSTL_FTP_UNABLE_DETECT_ROOT_FOLDER="Kunne ikkje finne FTP-rotmappe automatisk"
+
+;others - hugs at vi IKKJE oversetter direktiv/namn/betegnelser.
+INSTL_ADVANCED_SETTINGS="Avanserte innstillingar"
+INSTL_BASIC_SETTINGS="Grunninnstillingar"
+INSTL_CONFPROBLEM="Di konfigurasjonsfil eller -mappe er skrivebeskytta, eller det var eit problem med å opprette konfigurasjonsfila. Du må laste opp følgjande kode manuelt. Klikk i tekstfeltet for å merke heile koden, kopier så innhaldet over i ei ny fil og gi den namnet <em>configuration.php</em>. Denne lastar du opp i rotmappa til sida di."
+INSTL_DISPLAY_ERRORS="Display Errors"
+INSTL_ERROR_DB="En feil oppstod under forsøk på å leggje inn data i databasen %s"
+INSTL_FILE_UPLOADS="File Uploads"
+INSTL_GNU_GPL_LICENSE="GNU General Public-lisens på Engelsk (<a href="_QQ_"http://www.gnu.org/licenses/old-licenses/gpl-2.0-translations.html"_QQ_" target="_QQ_"_blank"_QQ_">klikk her</a> for å opne uoffisielle omsetjingar i nytt vindauge)"
+INSTL_INSTALLATION="Installasjon"
+INSTL_LICENSE="Lisens"
+INSTL_JSON_SUPPORT_AVAILABLE="JSON-støtte"
+INSTL_MAGIC_QUOTES_RUNTIME="Magic Quotes Runtime"
+INSTL_MB_LANGUAGE_IS_DEFAULT="MB Language er standard"
+INSTL_MB_STRING_OVERLOAD_OFF="MB String Overload er av"
+INSTL_MYSQL_SUPPORT="MySQL-støtte"
+INSTL_NOTICEMBLANGNOTDEFAULT="PHP mbstring language er ikkje sett til <em>neutral</em>. Dette kan gjerast lokalt ved å fylle inn <strong>php_value mbstring.language neutral</strong> i <code>.htaccess</code>-fila."
+INSTL_NOTICEMBSTRINGOVERLOAD="PHP mbstring function overload er sett på. Dette kan slåast av lokalt ved å fylle inn <strong>php_value mbstring.func_overload 0</strong> i <code>.htaccess</code>-fila."
+INSTL_NOTICEYOUCANSTILLINSTALL="<br />Du kan likevel fortsette installasjonen ettersom konfigurasjonen vil bli vist på slutten, og du kan da laste opp koden manuelt. Klikk i tekstfeltet for å merke all tekst, for så å kopiere og lime den inn i en ny tekstfil med namn <em>configuration.php</em>, som du til slutt laster opp i rotmappen for din side."
+INSTL_OUTPUT_BUFFERING="Output Buffering"
+INSTL_PARSE_INI_FILE_AVAILABLE="INI Parser-støtte"
+INSTL_PHP_VERSION="PHP-versjon"
+INSTL_REGISTER_GLOBALS="Register Globals"
+INSTL_SAFE_MODE="Safe Mode"
+INSTL_SESSION_AUTO_START="Session Auto Start"
+INSTL_WRITABLE="er skrivbar"
+INSTL_XML_SUPPORT="XML-støtte"
+INSTL_ZLIB_COMPRESSION_SUPPORT="Zlib Compression-støtte"
+
+;Global strings
+JADMINISTRATOR="Administrator"
+JADVANCED="Avansert"
+JCHECK_AGAIN="Sjekk igjen"
+JERROR="Feil"
+JGLOBAL_ISFREESOFTWARE="%s er fri programvare utgitt under <a href="_QQ_"http://www.gnu.org/licenses/gpl-2.0.html"_QQ_">GNU General Public License</a>."
+JINVALID_TOKEN="Den siste førespurnaden blei avvist fordi den innehaldt ein ugyldig tryggleiksskode. Oppdater sida og forsøk igjen."
+JNEXT="Neste"
+JNO="Nei"
+JOFF="Av"
+JON="På"
+JPREVIOUS="Tilbake"
+JSITE="Side"
+JUSERNAME="Brukarnamn"
+JYES="Ja"
+
+; Framework strings necessary when no lang pack is available
+JLIB_DATABASE_ERROR_LOAD_DATABASE_DRIVER="Kan ikkje laste databasedriver: %s"
+JLIB_ENVIRONMENT_SESSION_EXPIRED="Økta er utløpt, vennligst oppdater sida."
+JLIB_FORM_VALIDATE_FIELD_REQUIRED="Obligatorisk felt: %s"
+JLIB_FORM_VALIDATE_FIELD_INVALID="Ugyldig felt: %s"
+
+;Necessary for errors
+ADMIN_EMAIL="Di e-postadresse"
+ADMIN_PASSWORD="Administratorpassord"
+ADMIN_PASSWORD2="Stadfest adminstratorpassord"
+SITE_NAME="Sidenamn"
