@@ -1,0 +1,24 @@
+<?xml version="1.0" encoding="utf-8"?>
+	<!-- $Id: nn-NO.xml 1576 2011-01-30 21:48:21Z rued $ -->
+<metafile
+	version="1.6"
+	client="installation">
+	<name>Norsk nynorsk (Norway)</name>
+	<version>1.6.1</version>
+	<creationDate>2011-01-30</creationDate>
+	<author>Joomla! i Norge</author>
+	<authorEmail>admin@joomla.org</authorEmail>
+	<authorUrl>www.joomla.org</authorUrl>
+	<copyright>Copyright (C) 2005 - 2011 Open Source Matters. All rights reserved.</copyright>
+	<license>GNU General Public License version 2 or later; see LICENSE.txt</license>
+	<description></description>
+	<files>
+		<filename>nn-NO.ini</filename>
+	</files>
+	<metadata>
+		<name>Norsk nynorsk (Norway)</name>
+		<tag>nn-NO</tag>
+		<rtl>0</rtl>
+	</metadata>
+	<params />
+</metafile>
